--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
     <section class="big-news">
       <!-- The big news content -->
     </section>
-
+<h1>test</h1>
     <section class="">
       <!-- The other news  -->
     </section>
