--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,53 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- dont forget the meta tag for responsiveness: done! -->
+    <title>Slow times</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=David+Libre&family=Roboto:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      
+    <img src="sloth_icon.png">
+
+    <h1>Slow Times</h1>
+
+    <nav>
+      <a href="#">About</a>
+      <a href="#">Archive</a>
+      <a href="#">Buy</a>
+      <a href="#">Subscribe</a>
+    </nav>
+
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
+<!-- the background I put into the CSS  as a background image in the header, and not in the HTML ? 
+  Use a linear gradient as the background image? Baybe one that moves upon hover-->
+    
+
     </header>
+  
+    <section class="container">
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+      <section class="main-story">
+        <!-- The big news story up front -->
+      </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+      <section class="editor-news">
+        <!-- The first line of boxes-->
+      </section>
+
+      <section class="recent-news">
+        <!-- The other news  -->
+      </section>
+
+  </section>
   </body>
 </html>
