--- a/code/index.html
+++ b/code/index.html
@@ -5,28 +5,115 @@
   <meta charset="utf-8" />
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
+    <!-- logo and navbar -->
     <img src="logo.svg" alt="logo">
 
     <nav>
-      <a class="order-1" href="#">One</a>
-      <a class="order-2" href="#">Two</a>
+      <a href="#">One</a>
+      <a href="#">Two</a>
       <a href="#">Three</a>
       <a href="#">Four</a>
     </nav>
   </header>
-  <section class="big-news">
-    <!-- The big news content -->
-  </section>
 
-  <section class="">
+  <main class="wrapper">
+    <h1>Today's breaking news.</h1>
+      <!-- The big news content -->
+      <section class="big-news">
+      <article class="big-news-box1">
+        <h2>Progress in the development of Coronaviruse vaccine</h2>
+        <img src="pics/vaccination.jpg" alt="vaccination image">
+      </article>
+      <article class="big-news-box2">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+        takimata sanctus est Lorem ipsum dolor sit amet. At vero eos et accusam et justo duo dolores et ea rebum.
+          display: flex;
+      </p>
+      </article>
+    </section>
+
     <!-- The other news  -->
-  </section>
+    <section class="other-news"> 
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+      </article>
+      <article class="news-box">
+        <h2>Wheather forecast for the next ten days.</h2>
+        <img src="pics/wheather.jpg" alt="wheather image">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+        sed diam voluptua.
+      </article> 
+    </section>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
