Added header and big news section with flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,64 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <!-- Link for google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <!-- Header with logo and navbar -->
     <header>
-      <!-- Some kind of logo and navbar -->
+      <a>
+        <img class="menu" src="menu_icon.svg" alt="menu image">
+      </a>
+      <img class="logo" src="logo.svg" alt="logo">
+
+      <nav>
+        <div>
+          <a href="#">ARCHIVE</a>
+          <a href="#">INFO</a>
+        </div>
+        <div>
+          <a href="#">CONTACT</a>
+          <a href="#">MORE</a>
+        </div>
+      </nav>
     </header>
 
+    <!-- BIG NEWS SECTION -->
     <section class="big-news">
-      <!-- The big news content -->
+      <h1>NEWS NEWS NEWS!!!!</h1>
+      <div>
+        <img src="big-news.jpg" alt="water image">
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna 
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          Duis aute irure dolor in reprehenderit in voluptate velit 
+          esse cillum dolore eu fugiat nulla pariatur. Excepteur 
+          sint occaecat cupidatat non proident, sunt in culpa qui 
+          officia deserunt mollit anim id est laborum."
+        </p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <br>
+    <hr>
+
+    <!-- SMALL NEWS SECTION  -->
+    <section class="small-news-container">
+      <div class="grid-1"></div>
+      <div class="grid-2"></div>
+      <div class="grid-3"></div>
+      <div class="grid-4"></div>
+      <div class="grid-5"></div>
+      <div class="grid-6"></div>
+      <div class="grid-7"></div>
+      <div class="grid-8"></div>
     </section>
   </body>
 </html>
