--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="widht=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fooder Magazine - Keep up with the latest of the foodie community</title>
   <link rel="stylesheet" href="style.css">
   <!--<link rel="stylesheet" href="./style.css" />-->
