Added responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -11,22 +11,19 @@
   <body>
 
     <header>
-      <ul class="logo">
-        <li><img src="logo.png"></li>
-        <li>URBAN STYLE</li>
-      </ul>            
-      <!--<div class="menu"> 
-
-      </div>-->
-      <ul class="desktop-menu">
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
-      </ul>
+      <div class="logo">
+        <img src="logo.png">
+        <p>URBAN STYLE</p>
+      </div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
 
     <article class="main-news">
-      <img src="main-news-pic.jpeg" alt="Urban fashion photo">
+      <img src="main-news.jpeg" alt="Urban fashion photo">
       <h1>Back in town</h1>
     </article>
 
@@ -64,6 +61,14 @@
         <h2>How to draw attention with monochrome pop colors</h2>
       </article>
     </section>
+
+    <footer>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </footer>
        
   </body>
 </html>
