added clickable images and shadows

--- a/code/index.html
+++ b/code/index.html
@@ -12,31 +12,38 @@
       <img src="hearthnoob.png" alt="hearthnoob logo">
     </header>
 
+       <!--Big news section-->
     <section class="big-news">
       <div>
-        <img src="toxic reinforcements.png" alt="toxic reinforcements">
-        <a href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">Toxic Reinforcements</a>
+        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+          <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        </a>
+        
       </div>
     </section>
 
+      <!-- The other news section -->
     <section class="other-news">
-      <!-- The other news  -->
       <div>
-        <img src="toxic reinforcements.png" alt="toxic reinforcements">
-        <p>Lorem</p>
+        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+          <img src="toxic reinforcements.png" alt="toxic reinforcements">
       </div>
+
       <div>
-        <img src="toxic reinforcements.png" alt="toxic reinforcements">
-        <p>Lorem</p>
+        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+          <img src="toxic reinforcements.png" alt="toxic reinforcements">
       </div>
+
       <div>
-        <img src="toxic reinforcements.png" alt="toxic reinforcements">
-        <p>Lorem</p>
+        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+          <img src="toxic reinforcements.png" alt="toxic reinforcements">
       </div>
+
       <div>
-        <img src="toxic reinforcements.png" alt="toxic reinforcements">
-        <p>Lorem</p>
+        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+          <img src="toxic reinforcements.png" alt="toxic reinforcements">
       </div>
+
     </section>
   </body>
 </html>
