Styled small card

--- a/code/index.html
+++ b/code/index.html
@@ -39,19 +39,22 @@
       
       <!-- The other news  -->
     <section class="smaller-news">
-      <div class="smaller-news-card">
-        <div>
-          <img src="logo.svg" alt="Technigo logo">
+      <div class="smaller-news-cards">
+        <div class="single-little-card">
+          <!-- <img src="logo.svg" alt="Technigo logo"> -->
           <article>
-            <h2>Mala novica 1 zate</h2>
+            <a href="#">News</a>
+            <h2>An Apocalyptic August in California</h2>
             <p>
-              Manjsi news test tekst. 
+              By Anna Weiner. 
             </p>
           </article>
+          <img src="logo.svg" alt="Technigo logo">
         </div>
-        <div>
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
+            <a href=""></a>
             <h2>Mala novica 2 zate</h2>
             <p>
               Manjsi news test tekst. 
@@ -59,8 +62,8 @@
           </article>
         </div>
       </div>
-      <div class="smaller-news-card">
-        <div>
+      <div class="smaller-news-cards">
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
             <h2>Mala novica 3 zate</h2>
@@ -69,7 +72,7 @@
             </p>
           </article>
         </div>
-        <div>
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
             <h2>Mala novica 4 zate</h2>
@@ -79,8 +82,8 @@
           </article>
         </div>
       </div>
-      <div class="smaller-news-card">
-        <div>
+      <div class="smaller-news-cards">
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
             <h2>Mala novica 5 zate</h2>
@@ -89,7 +92,7 @@
             </p>
           </article>
         </div>
-        <div>
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
             <h2>Mala novica 6 zate</h2>
@@ -99,8 +102,8 @@
           </article>
         </div>
       </div>
-      <div class="smaller-news-card">
-        <div>
+      <div class="smaller-news-cards">
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
             <h2>Mala novica 7 zate</h2>
@@ -109,7 +112,7 @@
             </p>
           </article>
         </div>
-        <div>
+        <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
           <article>
             <h2>Mala novica 8 zate</h2>
@@ -119,18 +122,6 @@
           </article>
         </div>
       </div>
-      <!-- <div class="news-2">
-        <img src="logo.svg" alt="Technigo logo">
-        <img src="logo.svg" alt="Technigo logo">
-      </div>
-      <div class="news-3">
-        <img src="logo.svg" alt="Technigo logo">
-        <img src="logo.svg" alt="Technigo logo">
-      </div>
-      <div class="news-4">
-        <img src="logo.svg" alt="Technigo logo">
-        <img src="logo.svg" alt="Technigo logo">
-      </div> -->
     </section>
 
     <footer>
