--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
+<head>
+  <meta charset="utf-8" />
+  <title>Sandrine's News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <header>
+    <img class="" src="./logo.svg" alt="A Nice logo">
+    <!-- Some kind of logo and navbar -->
+  </header>
+
+  <main>
     <section class="big-news">
       <!-- The big news content -->
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
     </section>
-
     <section class="">
       <!-- The other news  -->
     </section>
+  </main>
+  <footer>
+    <p>Footer</p>
+  </footer>
+</body>
 
-  </body>
 </html>
