Managed to have 1-2-4 cards per row depending on device with flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <div class="logo">
-        <img src="logo.png">
+        <img src="./logo.png" alt="logo">
         <p>URBAN STYLE</p>
       </div>
       <nav>
@@ -23,7 +23,7 @@
     </header>
 
     <article class="main-news">
-      <img src="main-news.jpeg" alt="Urban fashion photo">
+      <img src="./main-news.jpeg" alt="Urban fashion photo">
       <h1>Back in town</h1>
     </article>
 
