--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,13 @@
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+    <div>
+      <ul>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </div>
     </section>
 
     <section class="">
