First test commit, html overview and template, css basics with focus on the main sections (big and small articles), mobile and tablet responsive

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,76 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Climate News</title>
     <link rel="stylesheet" href="./style.css" />
+  
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./images/logo.svg"> 
+      <nav>
+        <a href="#">Sience</a>
+        <a href="#">Activism</a>
+        <a href="#">Positive trends</a>
+        <a href="#">Politics</a>
+      </nav>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <article class="bigArticle">
+       <img src="./images/photo-wind_park.jfif">
+       <section class="articleText">
+       <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </h1>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptas quod beatae accusantium. Quam officiis et provident laborum temporibus dignissimos harum vero aperiam praesentium, consectetur facilis dolor ea laboriosam expedita.</p>
+       <p class="dates">Written by xxxx xxxx 2020-08-20</p><!-- The big news content --></section>
+    </article>
     </section>
 
-    <section class="">
+    <section class="small-news">
       <!-- The other news  -->
+      <article class="smallArticle">
+        <img src="images/photo-wind_park.jfif">
+        <section class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </section>
+      </article>
+      <article class="smallArticle">
+        <img src="images/photo-wind_park.jfif">
+        <section class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </section>
+      </article>
+      <article class="smallArticle">
+        <img src="images/photo-wind_park.jfif">
+        <section class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </section>
+      </article>
+      <article class="smallArticle">
+        <img src="images/photo-wind_park.jfif">
+        <section class="articleText">
+          <h2>Smaller article</h2>
+          <p>Some text here about this smaller article</p>
+          <p class="dates">2020-08-20</p>
+        </section>
+      </article>
     </section>
+
+    <footer>
+
+
+    </footer>
+
+
+
   </body>
 </html>
