responsive footer in tablet and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -134,11 +134,11 @@
 
 <!--footer-->
 <!--LOOK OVER LOGO PLACEMENT, add button if time-->
-<div class="footer-container">
-  <div class="footer">
+<footer>
+    <div class="footer">
    <img class="logo" src="logo.svg">
   </div>
-</div>   
+</footer> 
 
 
 
