HTML content and mobile styling

--- a/code/index.html
+++ b/code/index.html
@@ -5,30 +5,149 @@
   <meta charset="utf-8" />
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+
+
+  <!-- SECTION 1 - logo & navbar -->
   <header>
-    <!-- Some kind of logo and navbar -->
+    <section id="section-1" class="section-1">
 
-    <img src="logo.svg">
-    <nav>
-      <a class="order-1" href="#">one</a>
-      <a class="order-2" href="#">two</a>
-      <a href="#">three</a>
-      <a href="#">four</a>
-    </nav>
+      <a href="#">
+        <img class="logo" src="logo.svg">
+      </a>
 
+      <h1>SITE NAME</h1>
+
+      <nav>
+        <a href="#">one</a>
+        <a href="#">two</a>
+        <a href="#">three</a>
+        <a href="#">four</a>
+      </nav>
+
+    </section>
   </header>
 
-  <section class="big-news">
-    <!-- The big news content -->
+
+  <!-- SECTION 2 - the big news content -->
+  <section id="section-2" class="section-2">
+
+    <img src="logo.svg">
+    <div class="big-news">
+      <a class="news" href="#">
+        <h2>hejsan svejsan vad heter du</h2>
+        <p>This is a website that celebrates the world of surface pattern design. Lorem ipsum dolor sit amet,
+          consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.</p>
+        <p class="read-more">[Read more] &rarr;</p>
+      </a>
+    </div>
+
   </section>
 
-  <section class="">
-    <!-- The other news  -->
+  <!-- SECTION 3 – the other news -->
+  <section id="section-3" class="section-3">
+
+    <!-- CARD - 1 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
+    <!-- CARD - 2 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
+    <!-- CARD - 3 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
+    <!-- CARD - 4 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
+    <!-- CARD - 5 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
+    <!-- CARD - 6 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
+    <!-- CARD - 7 -->
+    <div class="card-container">
+      <div class="card">
+        <a href="#">
+          <img class="img-card" src="logo.svg">
+          <h3 class="text-on-pic">hej</h3>
+        </a>
+      </div>
+      <p class="card-text"><span class="card-text-highlight">lite text</span> och lite mer text.</p>
+    </div>
+
   </section>
+
+  <!-- SECTION 4 – back to top -->
+  <footer>
+    <section id="section-4" class="section-4">
+
+      <div class="back-to-top">
+        <a href="#section-1">
+          <img class="logo-bottom" src="logo.svg">
+          <h1 class="site-name-bottom">SITE NAME</h1>
+        </a>
+      </div>
+
+    </section>
+  </footer>
+
+
+
+
 </body>
 
 </html>
