--- a/code/index.html
+++ b/code/index.html
@@ -33,7 +33,7 @@
     <section class="small-news">
       <!-- The other news  -->
       <article class="smallArticle">
-        <img src="images/photo-wind_park.jfif">
+        <img src="./images/photo-wind_park.jfif">
         <section class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
@@ -41,7 +41,7 @@
         </section>
       </article>
       <article class="smallArticle">
-        <img src="images/photo-wind_park.jfif">
+        <img src="./images/photo-wind_park.jfif">
         <section class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
@@ -49,7 +49,7 @@
         </section>
       </article>
       <article class="smallArticle">
-        <img src="images/photo-wind_park.jfif">
+        <img src="./images/photo-wind_park.jfif">
         <section class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
@@ -57,7 +57,7 @@
         </section>
       </article>
       <article class="smallArticle">
-        <img src="images/photo-wind_park.jfif">
+        <img src="./images/photo-wind_park.jfif">
         <section class="articleText">
           <h2>Smaller article</h2>
           <p>Some text here about this smaller article</p>
