pictures added to small news in mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
       <a class="linkleft" href="#">Contact</a>
       <a class="linkleft" href="#">About</a>
       <a class="linkright" href="#">Donate</a> 
-      <a class="linkright" href="https://www.pinterest.com/">Pinterest</a>     
+      <a class="linkright" href="#">Join us</a>     
   </div>
 </nav>
 <!--header-->
@@ -72,40 +72,56 @@
   <div class="small-news">
     <h4>Column</h4>
     <p>"How to smash the patriarchy"</p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
+
   <div class="small-news">
     <h4>Book Review</h4>
     <p>"This weeks book review"</p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
+
   <div class="small-news">
     <h4>Health</h4>
     <p>"Great news! First birthcontrol without side effects have been produced."</p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
+
   <div class="small-news">
     <h4>Column</h4>
     <p>"The pay gap?- no more!"</p>
-    <a href="#"></a>
-  </div> <div class="small-news">
-    <h4>Interview</h4>
-    <p>bla bla bla </p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
+
+   <div class="small-news">
+    <h4>Interview</h4>
+    <p>bla bla bla </p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
+    <a href="#"></a>
+  </div>
+
   <div class="small-news">
     <h4>Health</h4>
     <p>Sweden just hit 0% deaths for women giving birth</p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
+
   <div class="small-news">
     <h4>Small news</h4>
     <p>bla bla bla</p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
+
   <div class="small-news">
     <h4>Small news</h4>
     <p>small news</p>
+    <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
 
@@ -136,7 +152,8 @@
 <!--LOOK OVER LOGO PLACEMENT, add button if time-->
 <footer>
     <div class="footer">
-   <img class="logo" src="logo.svg">
+   <img class="logo" src="./img/logo.svg">
+   </a>
   </div>
 </footer> 
 
