pictures adjusted to tablet and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -85,7 +85,7 @@
 
   <div class="small-news">
     <h4>Health</h4>
-    <p>"Great news! First birthcontrol without side effects have been produced."</p>
+    <p>"First birthcontrol without side effect"</p>
     <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
@@ -106,7 +106,7 @@
 
   <div class="small-news">
     <h4>Health</h4>
-    <p>Sweden just hit 0% deaths for women giving birth</p>
+    <p>Sweden just hit 0% </p>
     <img class="small-img" src="./img/yellow.jpg" alt="">
     <a href="#"></a>
   </div>
