Made changes to the links to images

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nailtech news</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" type="image/png" href="../images/favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
   </head>
@@ -14,7 +14,7 @@
     <header>
       <nav><!-- Logo and navbar -->
         <ul>
-          <li class="li-1"><img src="../images/favicon-32x32.png"></li>
+          <li class="li-1"><img src="./favicon-32x32.png"></li>
           <li class="li-2">Nailtech News</li>
           <li class="li-3"><a href="http://www.bokadirekt.se">Book a nailtech</a></li>
           <li class="li-4"><a href="https://lillynails.se/proffs-utbildningar">Become a nailtech</a></li>
@@ -31,7 +31,7 @@
           <p>Get new clients with these custom made press-on nails.
           Both the good looks and the social distancing!</p>
       </div>
-      <img src="../images/9.png" alt="Black and yellow nailart with flames">
+      <img src="./9.png" alt="Black and yellow nailart with flames">
     </section></a>
 
     <!-- Article grid section-->
@@ -41,8 +41,8 @@
       <a href="https://moonflair.se/how-to-dream-big-and-reach-those-goals/">
         <div>
         <h2>Do you dare to dream big?</h2>
-        <p>This is why you should, and how to plan it.</p></a></div>
-      <img src="../images/11.png" alt="Pink nails with blue and white flowers">
+        <p>This is why you should, and how to plan it.</p></div></a>
+      <img src="./11.png" alt="Pink nails with blue and white flowers">
       </section>
       
     <section class="news">
@@ -50,7 +50,7 @@
       <div>
         <h2>New to social media-marketing? </h2>
         <p>Learn to market your business on Instagram, gain more followers, new clients AND make some money.</p></div></a>
-      <img src="../images/2.png" alt="Woman with a phone in her hands">
+      <img src="./2.png" alt="Woman with a phone in her hands">
       </section>
 
     <section class="news">
@@ -58,7 +58,7 @@
       <div>
         <h2>Love or hate? Other nailtechs, colleagues or enemies?</h2>
         <p>Why networking and sharing knowledge benefits us all.</p></div></a>
-      <img src="../images/3.png" alt="Dark pink nailart hearts and the text love on them">
+      <img src="./3.png" alt="Dark pink nailart hearts and the text love on them">
       </section>
 
     <section class="news">
@@ -66,7 +66,7 @@
       <div>
         <h2>Tired of all those clients who just wants the same red color every time?</h2>
         <p>This is how you get some new clients, and get to create the designs you dream of.</p></div></a>
-      <img src="../images/4.png" alt="Dark redbrown nails with some subtle glitter">
+      <img src="./4.png" alt="Dark redbrown nails with some subtle glitter">
       </section>
 
     <section class="news">
@@ -74,7 +74,7 @@
       <div>
         <h2>Crystal nails are pretty awesome, but how do I do it?</h2>
         <p>Don't worry, we have a beginners guide to all dat bling.</p></div></a>
-      <img src="../images/5.png" alt="Turqouise nails with a lot of glitter and bling">
+      <img src="./5.png" alt="Turqouise nails with a lot of glitter and bling">
     </section>
 
     <section class="news">
@@ -83,7 +83,7 @@
         <h2>SS3? AB? SS10?</h2>
         <p>So you got started with crystal-designs, but what does really all this means?
         In this comprehensive crystal-guide you will learn everything that's worth knowing.</p></div></a>
-      <img src="../images/8.png" alt="Metallic red nails with silver decorations and bling">
+      <img src="./8.png" alt="Metallic red nails with silver decorations and bling">
       </section>
 
     <section class="news">
@@ -91,7 +91,7 @@
       <div>
         <h2>Need inspiration?</h2>
         <p>Here's the best Instagram nail-art accounts to follow.</p></div></a>
-      <img src="../images/10.png" alt="Light yellow nails with pink cherryflower-buds">
+      <img src="./10.png" alt="Light yellow nails with pink cherryflower-buds">
       </section>
 
   <section class="news">
@@ -99,7 +99,7 @@
     <div>
       <h2>How much would you charge for this set of nails?</h2>
       <p>Learn to set the pricing right in your salon.</p></div></a>
-    <img src="../images/6.png" alt="Neon yellow nails with glitter">
+    <img src="./6.png" alt="Neon yellow nails with glitter">
   </section>
 
   </article>
