added design and footer

--- a/code/index.html
+++ b/code/index.html
@@ -10,12 +10,19 @@
   <body>
     <header>
       <img src="hearthnoob.png" alt="hearthnoob logo">
+    
     </header>
+
+    <section class="introduction">
+
+      <h1>Great hearthstone decks for beginners!</h1>
+
+    </section>
 
        <!--Big news section-->
     <section class="big-news">
       <div>
-        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
         </a>
         
@@ -25,25 +32,33 @@
       <!-- The other news section -->
     <section class="other-news">
       <div>
-        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        </a>
       </div>
 
       <div>
-        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        </a>
       </div>
 
       <div>
-        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        </a>
       </div>
 
       <div>
-        <a class="article-link" href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        </a>
       </div>
 
     </section>
+
+    <footer class="footer">
+      <h2>Created by monkeybusiness101</h2>
+    </footer>
   </body>
 </html>
