Styled a single mini card

--- a/code/index.html
+++ b/code/index.html
@@ -49,7 +49,7 @@
               By Anna Weiner. 
             </p>
           </article>
-          <img src="logo.svg" alt="Technigo logo">
+          <img src="./logo.svg" alt="Technigo logo">
         </div>
         <div class="single-little-card">
           <img src="logo.svg" alt="Technigo logo">
