Start HTML and CSS for mobile version of news project

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,67 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+        <!-- meta tag for responsiveness -->
+    <meta name = "viewport" content="width=device.width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <title>SKREPPA - Run off for a little while </title>
+    
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./images/logo.png" alt="skreppa logo">
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <nav>
+        <a href="#">SOCIAL</a>
+        <a href="#">LIFESTYLE</a>
+        <a href="#">ABOUT</a>
+        <a href="#">SUBSCRIBE</a>
+      </nav>
     </header>
-
+ <!-- The big news content -->
     <section class="big-news">
-      <!-- The big news content -->
+      <div class ="big-news-image">
+        <img class = "image-big" src="./images/horse.PNG" alt="iclandic horse">
+        <p class="image-big-text">You could be ridning horses every damn day</p>
+      </div>
+      <div class ="big-news-news">
+        <h2> FIND THE COOLEST SPOTS ON ICELAND</h2>
+        <p class="big-news-text"> It’s a filming location for “Game of Thrones,”, it’s the home of Björk, and 54.4% of the nation believes that elves and trolls live in the countryside! 
+        <p class="big-news-text"> Iceland is known for not having a McDonald's, being free of mosquitos, the phallological museum with over 200 penises on display, and yeah of course - its wild landscape with volcanoes, waterfall, geysers, hot springs, and lava fields.  </p>
+        <h3>LET'S GO</h3>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <!-- The other news  -->
+    <section class="other-news">
+      <div class ="other-news1">
+        <img class = "image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
+        <p class = "image-small-text">What you need to know about the waterfalls</p>
+      </div>
+      <div class ="other-news2">
+        <img class = "image-news2" src="./images/lighthouse.png" alt="iclandic lighthouse">
+        <p class = "image-small-text">Solitued with a view</p>
+      </div>
+      <div class ="other-news3">
+        <img class = "image-news3" src="./images/purple_fields.png" alt="iclandic landscape">
+        <p class = "image-small-text"> Experience a purple gladiator moment</p>
+      </div>
+      <div class ="other-news4">
+        <img class = "image-news4" src="./images/glacier.png" alt="iclandic glacier">
+        <p class = "image-small-text">How to take the best pictures</p>
+      </div>
     </section>
+
+    <footer>
+      <p> This page was made as part of the Technigo front-end developer boot camp Fall 2020.</p>
+      <p>Images and &copy; JOHANNA BLOM</p>
+      </p>
+
+    </footer>
   </body>
 </html>
